# tabreport

./: .gitignore  Cargo.toml  README.md  build.sh  install_native.sh  ops  rustflags  version
.github/: rustflags.sh
.github/workflows/: rust.yml
assets/: make-icon.js  package-lock.json  package.json
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
debugging/: make_events.py
examples/: call_dbus.sh  dmenu_test
extension/: .gitignore  background.js  build.sh  make-icon.js  manifest.json  package-lock.json  package.json
host/: Cargo.toml  make_host_manifest  net.diegoveralli.tabreport.json
host/src/: main.rs
integration_tests/: firefox.py  firefox_versions  requirements.in  requirements.txt  run.py  run_tests.sh  setup.sh  tabreport_tests.py  test_server.py
integration_tests/static/: four.html  one.html  three.html  two.html
