[package]
name = "tabreport_client"
version = "0.1.8"
authors = ["Diego Veralli <tabreport@diegoveralli.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
serde_derive = "1.*"

[dependencies.tabreport-common]
path = "../common"
