[package]
name = "tabreport_host"
version = "0.1.8"
authors = ["Diego Veralli <tabreport@diegoveralli.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus-crossroads = "0.5.*"
dbus = { version = "0.*", default-features = false }
ctrlc = { version = "3.*", features = ["termination"] }
byteorder = "1"
serde = { version = "1.*", features = ["derive"] }
serde_json =  "1.*"
serde_derive = "1.*"

[dependencies.tabreport-common]
path = "../common"
